# ehrglot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  go.mod  pyproject.toml
cmd/ehrglot/: main.go
pkg/schema/: loader.go
schemas/allscripts/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/athenahealth/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/ccda/: allergyintolerance_mapping.yaml  condition_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  procedure_mapping.yaml
schemas/cerner_millennium/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/cpsi/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/custom/: data_warehouse.yaml  patient_to_data_warehouse.yaml
schemas/eclinicalworks/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/epic_clarity/: allergyintolerance_mapping.yaml  condition_mapping.yaml  diagnosticreport_mapping.yaml  encounter_mapping.yaml  immunization_mapping.yaml  medicationrequest_mapping.yaml  observation_mapping.yaml  patient_mapping.yaml  practitioner_mapping.yaml  procedure_mapping.yaml
schemas/fhir_r4/: allergyintolerance.yaml  appointment.yaml  careplan.yaml  claim.yaml  condition.yaml  coverage.yaml  encounter.yaml  (+10 more)
tests/: conftest.py
(+80 files in other folders)
